# kisan-sarthi

./: .gitattributes  .gitignore  .pre-commit-config.yaml  BRINGUP.md  GPU_SESSION.md  GPU_session.md  Makefile  README.md  make.ps1  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py  session.py
app/mocks/: __init__.py  mock_asr.py  mock_llm.py  mock_tts.py
app/ui/: __init__.py
eval/: __init__.py  harness.py
eval/data/samples/: asr_eval.jsonl  grounding_eval.jsonl  routing_eval.jsonl
eval/metrics/: __init__.py  groundedness.py  latency.py  wer.py
eval/perf/: __init__.py  bench.py  bench_prompts.txt
eval/results/: baseline.json  report.md
kisan_sarthi/: README.md  __init__.py
kisan_sarthi/agent/: README.md  __init__.py
kisan_sarthi/agent/finetune/: __init__.py
kisan_sarthi/agent/guardrails/: __init__.py
kisan_sarthi/agent/rag/: __init__.py
kisan_sarthi/agent/tools/: __init__.py
kisan_sarthi/contracts/: __init__.py  models.py
kisan_sarthi/data/: __init__.py
kisan_sarthi/data/ingest/: __init__.py
kisan_sarthi/data/synthetic/: __init__.py
kisan_sarthi/serving/: README.md  __init__.py  client.py  metrics.py  quantize.py  server.py
kisan_sarthi/serving/config/: serving.yaml
kisan_sarthi/serving/trtllm/: __init__.py  build_engine.py
kisan_sarthi/speech/: README.md  __init__.py
scripts/: box_check.sh  capture_baseline.sh  check_serving.py  gate0_mock.py
tests/: test_bench_math.py  test_contracts.py  test_eval_metrics.py  test_integration_e2e.py  test_mocks.py  test_serving_config.py
(+3 files in other folders)
